kubernets-kind/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: "ingress.yansbarreiro.dev"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: 'goserver-service'
            port:
              number: 80
  tls:
  - hosts:
      - "ingress.yansbarreiro.dev"
    secretName: letsencrypt-tls
